0.0108    Sat Mar 17 18:12:55 IST 2007
    * Now passing $args to _init_strap() so T-R-Plugin-AlternateInterpreters
    can make use of it.

0.0107    Sat Mar 17 15:01:00 IST 2007
    * Moved a method call to a better place.
    * Normalized the parameters to _time_single_test().
    * Changed Direct hash value acecsses to accessors.
    * Eliminated the $test argument to _canonfailed() and friends because
    it's essentially $self->last_test_obj().
    * Inlined some assignemnts in _dubious_return().
    * Refactored the canonfailed functions.
    * Corrected the license in lib/Test/Run/Obj/CanonFailedObj.pm
    * Added more doucmentation to StrapsTotalObj and TestObj.

0.0106     Fri Mar 16 15:29:14 IST 2007
    * Removed the %fields_map variables that were not used.
    * Placed Test::Run::Base::Struct in its own .pm file.
    * Placed the structs objects in their own .pm files.
    * Implemented _tot_inc as tot()->inc($field) for better encapsulation.
      Added the relevant method to TotObj.pm.
    * Replaced the loading of Test::Run::Obj::Structs with the loading
      of its individual modules.
    * Moved a lot of logic to Test::Run::Straps::StrapsTotalsObj.
    * Extracted some methods.
    * Refactored the maximal numbers/length handling.
    * Added the List::Util to the dependencies.
    * Passing the filename inside Test::Run::Straps::StrapsTotalsObj.
    * In the test script analysis phase - eliminated passing objects from
      one method to another by making them instance slots.

0.0105    Mon Mar 12 23:46:34 IST 2007
    * Converted from TAPx::Parser 0.3x to TAP::Parser 0.51, including various
    changes to the tests and code to get over several regressions.

0.0104    Fri Feb 23 14:25:29 IST 2007
    * Added an empty PL_FILES key to the Makefile.PL to please old 
      ExtUtils::MakeMaker's that try to invoke "Build.PL Build".
    * Fixed the skip to skip 7 tests instead of 8 - it broke the build 
      in perl-5.6.2.
