@@ -1,6 +1,6 @@
 ---
 name: Test-Run
-version: 0.0107
+version: 0.0108
 author:
   - 'Shlomi Fish C<< <shlomif@iglu.org.il> >>'
 abstract: Run Perl standard test scripts with statistics
@@ -25,7 +25,7 @@ provides:
     file: lib/Test/Run/Base/Struct.pm
   Test::Run::Core:
     file: lib/Test/Run/Core.pm
-    version: 0.0107
+    version: 0.0108
   Test::Run::Iface:
     file: lib/Test/Run/Iface.pm
   Test::Run::Obj:
