@@ -1,6 +1,7 @@
 0.0108    Sat Mar 17 18:12:55 IST 2007
     * Now passing $args to _init_strap() so T-R-Plugin-AlternateInterpreters
     can make use of it.
+    * Fixed the undef-warnings.t test accordingly.
 
 0.0107    Sat Mar 17 15:01:00 IST 2007
     * Moved a method call to a better place.
